[gd_scene load_steps=8 format=3 uid="uid://bebeg3ncof7vl"]

[ext_resource type="Script" path="res://Scenes/Interface/shop_screen.gd" id="1_pprmq"]
[ext_resource type="Shader" path="res://Misc/blur_screen.gdshader" id="1_w13mv"]
[ext_resource type="Texture2D" uid="uid://cii37ffppbca" path="res://Art/32x32_white_square.png" id="2_mcydg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11kvt"]
shader = ExtResource("1_w13mv")
shader_parameter/lod = 2.0
shader_parameter/mix_percentage = 0.3

[sub_resource type="Animation" id="Animation_da04w"]
resource_name = "wave_complete"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 1.5, 2),
"transitions": PackedFloat32Array(3, 1, 1, 1),
"update": 0,
"values": [3.0, 0.5, 0.5, -5.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 1.5, 2),
"transitions": PackedFloat32Array(3, 1, 1, 1),
"update": 0,
"values": [3.0, 0.5, 0.5, -5.0]
}

[sub_resource type="Animation" id="Animation_6cspg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3i2c"]
_data = {
"RESET": SubResource("Animation_6cspg"),
"wave_complete": SubResource("Animation_da04w")
}

[node name="ShopScreen" type="CanvasLayer"]
script = ExtResource("1_pprmq")

[node name="ShopUI" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_11kvt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mcydg")

[node name="Label" type="Label" parent="ShopUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -11.5
offset_right = 87.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "SHOP PLACEHOLDER!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="ShopUI"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = -140.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
text = "NEXT WAVE"

[node name="WaveCompleteLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 5.0
anchor_bottom = 0.5
offset_left = -164.5
offset_top = -27.5
offset_right = 164.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "WAVE COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaveCompleteLabel"]
libraries = {
"": SubResource("AnimationLibrary_g3i2c")
}

[connection signal="pressed" from="ShopUI/NextButton" to="." method="_on_next_button_pressed"]
